--- a/main/templates/main/company.html
+++ b/main/templates/main/company.html
@@ -1,5 +1,6 @@
 {% extends 'main/base.html' %}
 {% load static %}
+{% load custom_filters %}
 
 {% block content %}
 <div id="layout-wrapper">
@@ -19,12 +20,15 @@
                             <h4 class="card-title text-center mb-4">{{ company.name }} Documents</h4>
                             <div class="row">
                                 {% if documents %}
-                                    {% for document in documents %}
+                                    {% for doc in documents %}
                                         <div class="col-md-4 mb-3">
                                             <div class="text-center">
-                                                <h5><i class="fas fa-file"></i> {{ document.file.name }}</h5>
-                                                <a href="" class="btn btn-info btn-sm"><i class="fas fa-eye"></i> View</a>
-                                                <a href="" class="btn btn-success btn-sm"><i class="fas fa-download"></i> Download</a>
+                                                <h5><i class="fas fa-file"></i> {% if doc.file.name %}
+                                                    {{ doc.file.name|filename }}
+                                                {% else %}
+                                                    {{ doc|filename_from_path }}
+                                                {% endif %}</h5>
+                                            
                                             </div>
                                         </div>
                                     {% endfor %}
