--- a/main/templates/main/business.html
+++ b/main/templates/main/business.html
@@ -5,45 +5,38 @@
 <div id="layout-wrapper">
     <div class="main-content">
         <div class="container-fluid">
-            <div class="row mt-4">
-                <div class="col-12">
-                    <div class="page-title-box d-flex align-items-center justify-content-between">
-                        <h4 class="mb-0 font-size-18">{{business.name}}</h4>
-                        
-                    </div>
-                </div>
-            </div>     
+            <div class="col-12 banner mt-1">
+                <img src="{% static 'dashboard/images/banner.jpeg' %}" alt="Banner Image" class="img-fluid">
+            </div>
             <div class="row mt-4">
                 <div class="col-xl-12">
                     <div class="card">
                         <div class="card-body">
-                            <h4 class="card-title text-center mb-4">{{business.name}} Categories</h4>
+                            <h4 class="mb-0 font-size-18">{{ business.name }}</h4>
+                            <h4 class="card-title text-center mb-4">{{ business.name }} Categories</h4>
                             <div class="row">
                                 {% if companies %}
                                 {% for company in companies %}
                                     <div class="col-md-4 mb-3">
-                                        
-                                                <div class="text-center">
-                                                  <a href="{% url 'main:company' business_id=business.id company_id=company.id %}">  <h5><i class="fas fa-folder"></i> {{ company.name }}</h5></a>
-                                                </div>
-                                     
+                                        <div class="text-center">
+                                            <a href="{% url 'main:company' business_id=business.id company_id=company.id %}" class="text-primary" style="font-size: 18px;"> <i class="fas fa-folder"></i> {{ company.name }}</a>
+                                        </div>
                                     </div>
                                 {% endfor %}
-                            {% else %}
+                                {% else %}
                                 <div class="col-12 text-center">
                                     <p>No company listed yet</p>
                                 </div>
-                            {% endif %}
+                                {% endif %}
                             </div>
-
                         </div>
                         <!-- end card-body-->
                     </div>
                     <!-- end card -->
-
                 </div>
             </div>
         </div>
     </div>
 </div>
+
 {% endblock content %}
