--- a/main/templates/main/includes/navbar.html
+++ b/main/templates/main/includes/navbar.html
@@ -11,24 +11,30 @@
                 </span>
             </a>
         </div>
-   
+
+        {% if user.is_authenticated %}
         <div class="d-flex align-items-center">
             <div class="dropdown d-inline-block ml-2">
                 <button type="button" class="btn header-item waves-effect waves-light" id="page-header-user-dropdown"
                     data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                    <span class="d-none d-sm-inline-block ml-1 text-dark">Brie</span>
+                    <span class="d-none d-sm-inline-block ml-1 text-dark">  {{ user.username }}</span>
                     <i class="mdi mdi-chevron-down d-none d-sm-inline-block"></i>
                 </button>
                 <div class="dropdown-menu dropdown-menu-right">
                     <a class="dropdown-item d-flex align-items-center justify-content-between" href="{% url 'main:create_business' %}">
                         <span>Dashboard</span>
                     </a>
-                    <a class="dropdown-item d-flex align-items-center justify-content-between" href="javascript:void(0)">
+                    <a class="dropdown-item d-flex align-items-center justify-content-between" href="{% url 'users:logout' %}">
                         <span>Log Out</span>
+                    </a>
+                    <hr>
+                    <a class="dropdown-item d-flex align-items-center justify-content-between" href="{% url 'users:register' %}">
+                        <span>Add User</span>
                     </a>
                 </div>
             </div>
             
         </div>
+        {% endif %}
     </div>
 </header>
