--- a/users/templates/admin/not_authorized.html
+++ b/users/templates/admin/not_authorized.html
@@ -14,14 +14,17 @@
                                 <div class="p-5">
                                     <div class="text-center mb-5">
                                         <a href="#" style="width: 50; height: 50;" class="text-dark font-size-22 font-family-secondary">
-                                            <h1>401</h1>
+                                            <h1>403</h1>
                                         </a>
                                     </div>
                                     <div class="text-center">
-                                        <img src="assets/images/404-error.svg" alt="error" height="140">
+                                        <!-- Use a Font Awesome icon for forbidden -->
+                                        <i class="fas fa-exclamation-circle" style="font-size: 140px; color: red;"></i>
+                                        
                                         <h1 class="h4 mb-3 mt-4">Access Denied</h1>
-                                        <p class="text-muted mb-4 w-75 m-auto">You Dont have permissions to access this resource</p>
+                                        <p class="text-muted mb-4 w-75 m-auto">You don't have permission to access this resource.</p>
                                     </div>
+                                    
                                 </div>
                             </div>
                         </div>
